--- a/List/MainWindow.xaml
+++ b/List/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:List"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="750" Background="#121212">
+        Title="To-Do List" Height="500" Width="750" Background="#121212">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -50,8 +50,8 @@
                 <RowDefinition Height="25" Style="{StaticResource tableRow}" />
             </Grid.RowDefinitions>
 
-            <Border Grid.Column="0" Grid.Row="0" Style="{StaticResource tableBackground}" Grid.RowSpan="10" Opacity=".12" CornerRadius="0,8,0,8"/>
-            <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource tableBackground}" Grid.RowSpan="10" Opacity=".14" CornerRadius="0,8,0,8"/>
+            <Border Grid.Column="0" Grid.Row="0" Style="{StaticResource tableBackground}" Grid.RowSpan="12" Opacity=".12" CornerRadius="0,8,0,8"/>
+            <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource tableBackground}" Grid.RowSpan="11" Opacity=".14" CornerRadius="0,8,0,8"/>
             <Border Grid.Column="2" Grid.Row="2" Style="{StaticResource tableBackground}" Grid.RowSpan="10" Opacity=".16" CornerRadius="0,8,0,8"/>
 
             <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource contentTitle}">
