--- a/HoverOverListItems/MainWindow.xaml
+++ b/HoverOverListItems/MainWindow.xaml
@@ -7,12 +7,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <local:HoverList x:Name="listBox" ItemsSource="{Binding}">
+        <local:HoverList x:Name="listBox" ItemsSource="{Binding}" SelectionChanged="ItemChanged">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}"></TextBlock>
+                    <TextBlock  Text="{Binding Name}"></TextBlock>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </local:HoverList>
+
+        <Button Name="Button1"  Content="Button" Width="75" MouseEnter="MouseOverButton" Click="MouseClicked" MouseWheel="MiddleClick"/>
+
     </Grid>
 </Window>
